--- a/sass/pages/_single-post.scss
+++ b/sass/pages/_single-post.scss
@@ -88,9 +88,9 @@
         text-transform: none;
       }
       .blog-short-description p {
-        width: 90%;
+        // width: 90%;
         font-size: 0.8rem;
-        word-break: break-all;
+        // word-break: break-all;
       }
     }
   }
